--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^4.8.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
+    "vue3-toastify": "^0.1.6",
     "yup": "^1.0.2"
   },
   "devDependencies": {
